# dm_noesis_runtime

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
cpp/: noesis_classes.cpp  noesis_events.cpp  noesis_font_provider.cpp  noesis_markup.cpp  noesis_render_device.cpp  noesis_shim.cpp  noesis_shim.h  noesis_view.cpp
docs/: PHASE_1_PLAN.md
src/: classes.rs  events.rs  ffi.rs  font_provider.rs  gui.rs  lib.rs  markup.rs  texture_provider.rs  view.rs  xaml_provider.rs
src/render_device/: device.rs  ffi.rs  mod.rs  types.rs  vtable.rs
tests/: classes.rs  events.rs  input.rs  lifecycle.rs  markup.rs  render_device.rs  safety_smoke.rs  text_and_keys.rs  visibility.rs
